--- a/winec2.yml
+++ b/winec2.yml
@@ -3,14 +3,14 @@
   gather_facts: no
   connection: local
   remote_user: root
-  vars_files:
-    - '../ec2.yml'
+#  vars_files:
+#    - '../ec2.yml'
   roles:
     - {role: 'roles/ec2-win'}
 
 - hosts: winec2
-  vars_files:
-    - '../ec2.yml'
+#  vars_files:
+#    - '../ec2.yml'
   vars:
     ansible_user: "{{ win_user }}"
     ansible_password: "{{ win_pass }}"
