--- a/sqlplay.yml
+++ b/sqlplay.yml
@@ -1,3 +1,10 @@
+---
 - hosts: all
+  gather_facts: no
+  tasks:
+  - name: Wait 600 seconds for target connection to become reachable/usable
+    wait_for_connection:
+  - name: Gather facts for first time
+    setup:
   roles:
     - { role: bahaula.win_sqlexpress2014 }
