sorted iis install into a role & added password customization to vmware windows deployment

--- a/roles/vmware-win/tasks/main.yml
+++ b/roles/vmware-win/tasks/main.yml
@@ -28,6 +28,7 @@
         dns_servers:
         - "{{ dns1 }}"
         - "{{ dns2 }}"
+        password: "{{ win_pass }}"
       wait_for_ip_address: yes
     delegate_to: localhost
     register: deploy
