--- a/adduser.yml
+++ b/adduser.yml
@@ -8,3 +8,6 @@
         state: present
         groups:
           - Users
+          - Administrators
+       password_never_expires: yes
+       update_password: always
