--- a/roles/rhvwindows/tasks/main.yml
+++ b/roles/rhvwindows/tasks/main.yml
@@ -21,6 +21,10 @@
          root_password: "{{ admin_pw }}"
          timezone: 'US Eastern Standard Time'
 
+ - name: Wait for Windows build & reboots
+   pause:
+     seconds: 60
+
  - name: List vms
    ovirt_vms_facts:
      auth: "{{ ovirt_auth }}"
@@ -58,6 +62,6 @@
      vms: 
        - "{{ vm_name }}"
 
- - name: Wait for Windows build & reboots
-   pause: 
-     seconds: 300
+# - name: Wait for Windows build & reboots
+#   pause: 
+#     seconds: 300
