added hostname to ad-join

--- a/roles/ad-client/tasks/main.yml
+++ b/roles/ad-client/tasks/main.yml
@@ -1,6 +1,6 @@
 ---
 # tasks file for ad-client
-  - name: Wait 600 seconds for target connection to become reachable/usable
+  - name: Wait up to 600 seconds for target connection to become reachable/usable
     wait_for_connection:
 
   - name: configure Windows DNS
@@ -15,6 +15,7 @@
       dns_domain_name: "{{ domain_name }}"
       domain_admin_user: "{{ domain_user }}"
       domain_admin_password: "{{ domain_pw }}"
+      hostname: "{{ vm_name }}"
       state: domain
     register: adjoin_result
 
