tweaked the gui demo

--- a/winpytest.yml
+++ b/winpytest.yml
@@ -1,13 +1,17 @@
 ---
-- hosts: win
+- hosts: all
+  vars:
+    ansible_port: 5985
+    ansible_connection: winrm
+
   tasks:
     - name: Download the shadowman graphic
       win_get_url:
         url: https://regmedia.co.uk/2012/06/21/red_hat_shadowman_logo.jpg
-        dest: C:\red_hat_shadowman_logo.jpg
+        dest: C:\pictures\red_hat_shadowman_logo.jpg
     - name: Copy the pywinautoscript file
       win_copy:
         src: winpython/mspaintstart.py
         dest: C:\mspaintstart.py
     - name: Resize graphic using MS Paint
-      win_command: c:\pstools\psexec.exe -i 1 -s python.exe C:\mspaintstart.py
+      win_command: c:\pstools\psexec.exe -i 1 -s c:\python\python36-32\python.exe C:\mspaintstart.py
