added vars to uac playbook

--- a/winuac.yml
+++ b/winuac.yml
@@ -1,5 +1,9 @@
 --- 
 - hosts: all
+  vars: 
+    ansible_winrm_server_cert_validation: ignore
+    ansible_port: 5985
+    ansible_connection: winrm
   tasks:
   - name: Configure registry items
     win_regedit:
