--- a/azure_remove.yml
+++ b/azure_remove.yml
@@ -1,7 +1,7 @@
 ---
 - hosts: localhost
   tasks:
-  - name: Create Resource group
+  - name: Delete Resource group and all the things
     azure_rm_resourcegroup:
       name: Testing
       location: eastus
