--- a/rhvbuild.yml
+++ b/rhvbuild.yml
@@ -4,3 +4,14 @@
   gather_facts: no
   roles:
     - {role: 'rhvwindows'}
+
+- hosts: winclients
+  vars:
+    ansible_user: "{{ win_user }}"
+    ansible_password: "{{ win_pass }}"
+    ansible_port: 5985
+    ansible_connection: winrm
+
+  roles:
+    - {role: 'roles/win_hostname'}
+    - {role: 'roles/iis'}
