--- a/rhvbuild.yml
+++ b/rhvbuild.yml
@@ -1,10 +1,20 @@
 ---
 - hosts: localhost
   connection: local
+  vars: 
+    vm_name: "{{ iisvm1 }}"
   gather_facts: no
   roles:
     - {role: 'rhvwindows'}
 
+- hosts: localhost
+  connection: local
+  vars: 
+    vm_name: "{{ iisvm2 }}"
+  gather_facts: no
+  roles:
+    - {role: 'rhvwindows'}
+    
 - hosts: winclients
   vars:
     ansible_user: "{{ win_user }}"
@@ -12,6 +22,22 @@
     ansible_port: 5985
     ansible_connection: winrm
 
+
   roles:
-    - {role: 'roles/win_hostname'}
     - {role: 'roles/iis'}
+
+- hosts: haproxy
+  tasks:
+  - name: Configure haproxy
+    blockinfile:
+      path: /etc/haproxy/haproxy.cfg
+      state: present
+      insertafter: EOF
+      block: |
+             server iis1 "{{ hostvars[groups['winclients'][0]]['ansible_ip_addresses'][0] }}":80 check
+             server iis2 "{{ hostvars[groups['winclients'][1]]['ansible_ip_addresses'][0] }}":80 check
+
+  - name: restart haproxy
+    service:
+      name: haproxy
+      state: restarted
