--- a/win_dns.yaml
+++ b/win_dns.yaml
@@ -5,5 +5,6 @@
     win_dns_record:
       name: "{{ name }}"
       type: " {{ type }}"
+      value: "{{ value }}"
       state: "{{ state }}"
       zone: "{{ zone }}" 
